[project]
name = "rag-test"
version = "0.1.0"
description = "Agentic RAG with LangGraph + DeepSeek + Self-Reflection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.20",
    "uvicorn>=0.40.0",
]

[project.scripts]
rag-test = "app.main:app"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
